Modfied further to fix naming convetion changes. However, there is still a missing headerfile, EposMasterConfig.h, which stops it from compiling. No idea where that is, so CMakeList.text is set to no longer build until that file is found

--- a/epos_manager/cfg/Motor.cfg
+++ b/epos_manager/cfg/Motor.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE="EposManager"
+PACKAGE="epos_manager"
 import roslib;roslib.load_manifest(PACKAGE)
 
 from dynamic_reconfigure.parameter_generator import *
