--- a/oryx_manager/CMakeLists.txt
+++ b/oryx_manager/CMakeLists.txt
@@ -31,10 +31,10 @@ gencfg()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(DriveManager src/Motors/DriveManager.cpp)
+rosbuild_add_executable(drive_manager src/Motors/DriveManager.cpp)
 #rosbuild_add_executable(CurrentTest src/currentTest.cpp)
-rosbuild_add_executable(BatteryManager src/Internals/BatteryManager.cpp)
-rosbuild_add_executable(CPUTempFinder src/Internals/CPUTempFinder.cpp)
-rosbuild_add_executable(InertiaCube src/Kinematics/InertiaCube.cpp)
-target_link_libraries(CPUTempFinder sensors)
-target_link_libraries(InertiaCube isense)
+rosbuild_add_executable(battery_manager src/Internals/BatteryManager.cpp)
+rosbuild_add_executable(CPU_temp_finder src/Internals/CPUTempFinder.cpp)
+rosbuild_add_executable(inertia_cube src/Kinematics/InertiaCube.cpp)
+target_link_libraries(CPU_temp_finder sensors)
+target_link_libraries(inertia_cube isense)
