--- a/oryx_manager/CMakeLists.txt
+++ b/oryx_manager/CMakeLists.txt
@@ -34,7 +34,7 @@ gencfg()
 rosbuild_add_executable(drive_manager src/Motors/DriveManager.cpp)
 #rosbuild_add_executable(CurrentTest src/currentTest.cpp)
 rosbuild_add_executable(battery_manager src/Internals/BatteryManager.cpp)
-rosbuild_add_executable(CPU_temp_finder src/Internals/CPUTempFinder.cpp)
-rosbuild_add_executable(inertia_cube src/Kinematics/InertiaCube.cpp)
-target_link_libraries(CPU_temp_finder sensors)
-target_link_libraries(inertia_cube isense)
+#rosbuild_add_executable(CPU_temp_finder src/Internals/CPUTempFinder.cpp)
+#rosbuild_add_executable(inertia_cube src/Kinematics/InertiaCube.cpp)
+#target_link_libraries(CPU_temp_finder sensors)
+#target_link_libraries(inertia_cube isense)
