--- a/oryx_network_manager/CMakeLists.txt
+++ b/oryx_network_manager/CMakeLists.txt
@@ -13,9 +13,6 @@ rosbuild_init()
 
 include($ENV{ROS_ROOT}/core/rosbuild/FindPkgConfig.cmake)
 
-FIND_PACKAGE(Qt4 REQUIRED)
-INCLUDE(${QT_USE_FILE})
-
 #set the default path for built executables to the "bin" directory
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 #set the default path for built libraries to the "lib" directory
@@ -26,14 +23,11 @@ rosbuild_genmsg()
 rosbuild_gensrv()
 
 
-rosbuild_add_executable(server src/NetworkManagerServer.cpp)
+rosbuild_add_executable(server src/NetworkManagerServer.cpp src/NetworkDeviceManager.cpp src/NetworkConnectionManager.cpp src/ActiveNetworkConnectionManager.cpp src/ActivateConnectionService.cpp)
 pkg_check_modules(LIB_NM REQUIRED dbus-1 glib-2.0 dbus-glib-1 libnm-glib libnm-util)
 include_directories(${LIB_NM_INCLUDE_DIRS})
 link_directories(${LIB_NM_LIBRARY_DIRS})
 target_link_libraries(server ${LIB_NM_LIBRARIES})
 
-
-#rosbuild_add_executable(ui src/NetworkManagerUI.cpp)
-#target_link_libraries(ui ${QT_LIBRARIES})
 
 rosbuild_add_executable(cli src/NetworkManagerCLI.cpp)
