--- a/oryx_diagnostics/CMakeLists.txt
+++ b/oryx_diagnostics/CMakeLists.txt
@@ -28,3 +28,10 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_link_boost(${PROJECT_NAME} thread)
 #rosbuild_add_executable(example examples/example.cpp)
 #target_link_libraries(example ${PROJECT_NAME})
+include_directories("${PROJECT_SOURCE_DIR}/src/includes")
+include_directories("${PROJECT_SOURCE_DIR}/src/nodes")
+include_directories("${PROJECT_SOURCE_DIR}/src/helpers")
+
+rosbuild_add_boost_directories()
+rosbuild_add_library(${PROJECT_NAME} src/helpers/NodeManager.cpp)
+rosbuild_add_executable(oryx_diagnostics_manager src/nodes/oryx_diagnostics_manager.cpp src/helpers/NodeManager.cpp)
