--- a/oryx/package.xml
+++ b/oryx/package.xml
@@ -1,10 +1,15 @@
-<stack>
-  <description brief="code for WPI's Oryx Robot">
+<package>
+  <name>oryx</name>
+  <version>1.0.0</version>
+  <description>
     A set of packages that define the operation of WPI's Oryx Robot. This stack contains all packages responsable for the basic operation of the platform (motor controllers, health monitoring, etc), but does not contain any special logic for the type of operation that is being conducted (autonomous, teleop, etc). It is inteded that anyone building a robot using the Oryx platform as its base will create their own stack that uses this stack as a dependancy.
   </description>
-  <author>Maintained by WPI RIVeR Lab</author>
+  <maintainer email="robot@wpi.edu">WPI RIVeR Lab</maintainer>
   <license>?</license>
-  <review status="unreviewed" notes=""/>
   <url>http://robot.wpi.edu/wiki/index.php/Oryx</url>
-  <depend stack="ros"/>
-</stack>
+  
+  <export>
+    <metapackage/>
+  </export>
+  
+</package>
