--- a/oryx_network_manager/CMakeLists.txt
+++ b/oryx_network_manager/CMakeLists.txt
@@ -1,33 +1,24 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(oryx_network_manager)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+find_package(catkin REQUIRED COMPONENTS roscpp std_msgs message_generation)
+find_package(PkgConfig)
 
-rosbuild_init()
+add_message_files(DIRECTORY msg FILES ActiveNetworkConnection.msg ActiveNetworkConnections.msg NetworkConnection.msg NetworkConnections.msg NetworkDevice.msg NetworkDevices.msg)
+add_service_files(DIRECTORY srv FILES ActivateConnection.srv)
 
-include($ENV{ROS_ROOT}/core/rosbuild/FindPkgConfig.cmake)
+generate_messages(DEPENDENCIES std_msgs)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+catkin_package(CATKIN_DEPENDS roscpp message_runtime)
 
-
-rosbuild_genmsg()
-rosbuild_gensrv()
-
-
-rosbuild_add_executable(server src/NetworkManagerServer.cpp src/NetworkDeviceManager.cpp src/NetworkConnectionManager.cpp src/ActiveNetworkConnectionManager.cpp src/ActivateConnectionService.cpp src/NetworkConfigurationManager.cpp)
 pkg_check_modules(LIB_NM REQUIRED dbus-1 glib-2.0 dbus-glib-1 libnm-glib libnm-util)
-include_directories(${LIB_NM_INCLUDE_DIRS})
+include_directories(${catkin_INCLUDE_DIRS} ${LIB_NM_INCLUDE_DIRS})
 link_directories(${LIB_NM_LIBRARY_DIRS})
-target_link_libraries(server ${LIB_NM_LIBRARIES})
 
+add_executable(server src/NetworkManagerServer.cpp src/NetworkDeviceManager.cpp src/NetworkConnectionManager.cpp src/ActiveNetworkConnectionManager.cpp src/ActivateConnectionService.cpp src/NetworkConfigurationManager.cpp)
+target_link_libraries(server ${LIB_NM_LIBRARIES} ${catkin_LIBRARIES})
+add_dependencies(server oryx_network_manager_gencpp)
 
-rosbuild_add_executable(cli src/NetworkManagerCLI.cpp)
+add_executable(cli src/NetworkManagerCLI.cpp)
+target_link_libraries(cli ${catkin_LIBRARIES})
+add_dependencies(cli oryx_network_manager_gencpp)
