--- a/oryx_manager/CMakeLists.txt
+++ b/oryx_manager/CMakeLists.txt
@@ -1,40 +1,17 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
+project(oryx_manager)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+find_package(catkin REQUIRED COMPONENTS roscpp oryx_msgs dynamic_reconfigure sensor_msgs epos_manager tf geometry_msgs nav_msgs)
 
-rosbuild_init()
+generate_dynamic_reconfigure_options(cfg/ArmManager.cfg cfg/DriveManager.cfg cfg/IMU.cfg cfg/OryxManager.cfg cfg/PTZManager.cfg)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
-rosbuild_find_ros_package(dynamic_reconfigure)
-include(${dynamic_reconfigure_PACKAGE_PATH}/cmake/cfgbuild.cmake)
-gencfg()
+catkin_package(CATKIN_DEPENDS roscpp oryx_msgs dynamic_reconfigure sensor_msgs epos_manager tf geometry_msgs nav_msgs)
 
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-rosbuild_add_executable(drive_manager src/Motors/DriveManager.cpp)
-#rosbuild_add_executable(CurrentTest src/currentTest.cpp)
-rosbuild_add_executable(battery_manager src/Internals/BatteryManager.cpp)
-#rosbuild_add_executable(CPU_temp_finder src/Internals/CPUTempFinder.cpp)
-#rosbuild_add_executable(inertia_cube src/Kinematics/InertiaCube.cpp)
-#target_link_libraries(CPU_temp_finder sensors)
-#target_link_libraries(inertia_cube isense)
+include_directories(include cfg/cpp ${catkin_INCLUDE_DIRS})
+
+add_executable(drive_manager src/Motors/DriveManager.cpp)
+target_link_libraries(drive_manager ${catkin_LIBRARIES})
+
+add_executable(battery_manager src/Internals/BatteryManager.cpp)
+target_link_libraries(battery_manager ${catkin_LIBRARIES})
