fixed oryx_msgs build to reflect rename of msg

--- a/oryx_msgs/CMakeLists.txt
+++ b/oryx_msgs/CMakeLists.txt
@@ -3,7 +3,7 @@ project(oryx_msgs)
 
 find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs message_generation)
 
-add_message_files(DIRECTORY msg FILES Battery.msg Blob.msg BlobList.msg Heartbeat.msg SoftStop.msg SwervePositions.msg Temperature.msg WheelVelocities.msg)
+add_message_files(DIRECTORY msg FILES Battery.msg Blob.msg BlobList.msg Heartbeat.msg SoftwareStop.msg SwervePositions.msg Temperature.msg WheelVelocities.msg)
 
 generate_messages(DEPENDENCIES std_msgs)
 
