--- a/epos_manager/package.xml
+++ b/epos_manager/package.xml
@@ -14,11 +14,11 @@
   <build_depend>roscpp</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>EposLib</build_depend>
+  <build_depend>eposcmd</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>message_runtime</run_depend>
-  <run_depend>EposLib</run_depend>
+  <run_depend>eposcmd</run_depend>
 </package>
 
 
